P5 E-Learning/force-app/main/default/objects/Module__c/fields/Completed_Units__c.field-meta.xml
<CustomField>
    <fullName>Completed_Units__c</fullName>
    <label>Completed Units</label>
    <summaryFilterItems>
        <field>Progress_Module_Per_Unit__c.Is_Completed__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Progress_Module_Per_Unit__c.Module__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>