P5 E-Learning/force-app/main/default/objects/Module__c/fields/Estimated_Module_Time__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Module_Time__c</fullName>
    <label>Estimated Module Time</label>
    <summarizedField>Unit__c.Time__c</summarizedField>
    <summaryForeignKey>Unit__c.Module__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>