P5 E-Learning/force-app/main/default/objects/Module__c/fields/Skill__c.field-meta.xml
<CustomField>
    <fullName>Skill__c</fullName>
    <label>Skill</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>DataManagement</fullName>
                <label>Data Management</label>
            </value>
            <value>
                <fullName>Apex</fullName>
            </value>
            <value>
                <fullName>Lightning</fullName>
            </value>
            <value>
                <fullName>Security</fullName>
            </value>
            <value>
                <fullName>AppLifecycle</fullName>
                <label>App Lifecycle</label>
            </value>
            <value>
                <fullName>AppLogic</fullName>
                <label>App Logic</label>
            </value>
            <value>
                <fullName>Database</fullName>
            </value>
            <value>
                <fullName>Reporting</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>