P5 E-Learning/force-app/main/default/objects/Module__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Tyoe of modul</description>
    <label>Type</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>