P5 E-Learning/force-app/main/default/objects/Module__c/fields/Units_Related__c.field-meta.xml
<CustomField>
    <fullName>Units_Related__c</fullName>
    <label>Units Related</label>
    <summaryForeignKey>Unit__c.Module__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>