P5 E-Learning/force-app/main/default/objects/Module__c/validationRules/Has_Rol_and_Skill.validationRule-meta.xml
<ValidationRule>
    <fullName>Has_Rol_and_Skill</fullName>
    <active>true</active>
    <errorConditionFormula>AND( Active__c ,(OR(ISBLANK(Rol__c), ISPICKVAL(Skill__c,&apos;&apos; ))))</errorConditionFormula>
    <errorDisplayField>Active__c</errorDisplayField>
    <errorMessage>Module can&apos;t be activated without having a skill and a roll</errorMessage>
</ValidationRule>